[package]
name = "harness-rs-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "agentskills.io-compliant SKILL.md loader, validator, linter, exporter, and in-process registry for harness-rs."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
name = "harness_skills"
path = "src/lib.rs"

[dependencies]
harness-core    = { workspace = true }
async-trait     = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serde_yaml      = { workspace = true }
tracing         = { workspace = true }
regex           = { workspace = true }
inventory       = { workspace = true }
walkdir         = { workspace = true }
once_cell       = { workspace = true }
