[package]
name = "harness-rs-templates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pre-built Blueprint templates (axum_crud, crate_keeper) and convention guides for harness-rs."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
name = "harness_templates"
path = "src/lib.rs"

[dependencies]
harness-core         = { workspace = true }
harness-blueprint    = { workspace = true }
harness-loop         = { workspace = true }
harness-tools-fs     = { workspace = true }
harness-tools-shell  = { workspace = true }
harness-sensors-rust = { workspace = true }
async-trait          = { workspace = true }
futures              = { workspace = true }
serde_json           = { workspace = true }
tracing              = { workspace = true }

[dev-dependencies]
tokio           = { workspace = true }
harness-context = { workspace = true }
