[package]
name = "harness-tools-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Filesystem tools (read, write, edit, ripgrep)"

[dependencies]
harness-core = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
once_cell    = { workspace = true }
